feat: add backend notifications foundation